--- a/backend/package.json
+++ b/backend/package.json
@@ -6,11 +6,14 @@
   "license": "UNLICENSED",
   "private": true,
   "scripts": {
-    "dev": "nodemon src/index.ts"
+    "dev": "nodemon src/index.ts",
+    "build": "tsc",
+    "start": "node dist/index.js"
   },
   "dependencies": {
     "dotenv": "^16.0.0",
-    "express": "^4.17.3"
+    "express": "^4.17.3",
+    "postgres": "^3.0.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
