--- a/backend/package.json
+++ b/backend/package.json
@@ -11,8 +11,10 @@
     "start": "node dist/index.js"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "jsonwebtoken": "^8.5.1",
     "postgres": "^3.0.0"
   },
   "devDependencies": {
