--- a/backend/package.json
+++ b/backend/package.json
@@ -18,7 +18,9 @@
     "postgres": "^3.0.0"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^17.0.23",
     "nodemon": "^2.0.15",
     "ts-node": "^10.7.0",
