--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "express": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
     "nodemailer": "^6.7.3",
+    "nodemailer-sendgrid-transport": "^0.2.0",
     "postgres": "^3.0.0"
   },
   "devDependencies": {
