--- a/backend/package.json
+++ b/backend/package.json
@@ -16,7 +16,7 @@
     "express": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
     "nodemailer": "^6.7.3",
-    "nodemailer-sendgrid-transport": "^0.2.0",
+    "nodemailer-mailgun-transport": "^2.1.3",
     "postgres": "^3.0.0"
   },
   "devDependencies": {
@@ -25,6 +25,7 @@
     "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^17.0.23",
     "@types/nodemailer": "^6.4.4",
+    "@types/nodemailer-mailgun-transport": "^1.4.3",
     "nodemon": "^2.0.15",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.3"
