--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,8 @@
   "scripts": {
     "dev": "nodemon src/index.ts",
     "build": "tsc",
-    "start": "node dist/index.js"
+    "start": "node dist/index.js",
+    "test": "jest --verbose ./unit-tests"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -20,13 +21,22 @@
     "postgres": "^3.0.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.17.8",
+    "@babel/preset-env": "^7.16.11",
+    "@babel/preset-typescript": "^7.16.7",
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.13",
+    "@types/jest": "^27.4.1",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^17.0.23",
     "@types/nodemailer": "^6.4.4",
     "@types/nodemailer-mailgun-transport": "^1.4.3",
+    "@types/supertest": "^2.0.12",
+    "babel-jest": "^27.5.1",
+    "jest": "^27.5.1",
     "nodemon": "^2.0.15",
+    "superagent": "^7.1.1",
+    "supertest": "^6.2.2",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.3"
   }
