--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -15,4 +15,7 @@ COPY package.json .
 COPY yarn.lock .
 RUN yarn install --production
 
+ENV NODE_ENV=production
+EXPOSE 8080
+
 CMD [ "yarn", "start" ]
