change to work with heroku

--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,2 +1,2 @@
-API_URI=http://localhost:8080
-NEXT_PUBLIC_API_URI=http://localhost:8080
+API_URI=https://okinawa-pace-backend.herokuapp.com
+NEXT_PUBLIC_API_URI=https://okinawa-pace-backend.herokuapp.com
