--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,2 +1,2 @@
-API_URI=https://okinawa-pace-backend.herokuapp.com
-NEXT_PUBLIC_API_URI=https://okinawa-pace-backend.herokuapp.com
+API_URI=https://api.pace-coffee.com
+NEXT_PUBLIC_API_URI=https://api.pace-coffee.com
