--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,17 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "12.1.1",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "next": "^12.1.6",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
     "sharp": "^0.30.3"
   },
   "devDependencies": {
-    "@types/node": "17.0.23",
-    "@types/react": "17.0.43",
+    "@types/node": "^17.0.31",
+    "@types/react": "^18.0.8",
     "@types/react-dom": "17.0.14",
     "eslint": "8.12.0",
     "eslint-config-next": "12.1.1",
-    "typescript": "4.6.3"
+    "typescript": "^4.6.4"
   }
 }
