--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,7 @@
   "devDependencies": {
     "@types/node": "^17.0.31",
     "@types/react": "^18.0.8",
-    "@types/react-dom": "17.0.14",
+    "@types/react-dom": "^18.0.3",
     "eslint": "8.12.0",
     "eslint-config-next": "12.1.1",
     "typescript": "^4.6.4"
