--- a/firebase/package.json
+++ b/firebase/package.json
@@ -10,6 +10,7 @@
     "lit": "^2.2.6"
   },
   "devDependencies": {
+    "@babel/core": "^7.18.5",
     "@babel/preset-env": "^7.18.2",
     "babel-loader": "^8.2.5",
     "copy-webpack-plugin": "^11.0.0",
@@ -23,5 +24,8 @@
     "webpack": "^5.73.0",
     "webpack-cli": "^4.10.0",
     "webpack-manifest-plugin": "^5.0.0"
+  },
+  "scripts": {
+    "build": "webpack --config webpack.prod.config.js"
   }
 }
