--- a/firebase/package.json
+++ b/firebase/package.json
@@ -23,9 +23,12 @@
     "typescript": "^4.7.4",
     "webpack": "^5.73.0",
     "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.9.2",
     "webpack-manifest-plugin": "^5.0.0"
   },
   "scripts": {
-    "build": "webpack --config webpack.prod.config.js"
+    "build": "webpack --config webpack.prod.config.js",
+    "start": "webpack serve",
+    "mkcert": "mkcert -key-file key.pem -cert-file cert.pem example.com *.example.com localhost"
   }
 }
