--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,23 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "dev": "astro dev",
+    "start": "astro dev",
+    "build": "astro build",
+    "preview": "astro preview"
   },
   "dependencies": {
-    "next": "^12.1.6",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
+    "astro": "^1.0.7",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "sharp": "^0.30.3"
   },
   "devDependencies": {
+    "@astrojs/lit": "^1.0.0",
+    "@astrojs/react": "^1.0.0",
     "@types/node": "^17.0.31",
     "@types/react": "^18.0.8",
     "@types/react-dom": "^18.0.3",
+    "@webcomponents/template-shadowroot": "^0.1.0",
     "eslint": "8.12.0",
     "eslint-config-next": "12.1.1",
+    "lit": "^2.3.1",
     "typescript": "^4.6.4"
   }
 }
