--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -26,7 +26,8 @@
     "baseUrl": ".",
     "paths": {
       "@components/*": ["src/components/*"],
-      "@localTypes/*": ["types/*"]
+      "@localTypes/*": ["types/*"],
+      "@firebase/*": ["src/firebase/*"]
     }
   },
   "include": ["**/*.ts", "**/*.tsx"],
