--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,8 +1,5 @@
 {
   "rules": {
-    "extends": ["eslint:recommended"],
-    "react/no-unescaped-entities": "off",
-    "@next/next/no-page-custom-font": "off",
-    "react/display-name": "off" // ignore display name errors
+    "extends": ["eslint:recommended"]
   }
 }
