--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@types/node": "^17.0.31",
     "@types/react": "^18.0.8",
     "@types/react-dom": "^18.0.3",
+    "@typescript-eslint/eslint-plugin": "^5.37.0",
+    "@typescript-eslint/parser": "^5.37.0",
     "@webcomponents/template-shadowroot": "^0.1.0",
     "eslint": "8.12.0",
     "eslint-config-next": "12.1.1",
