--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "lint": "eslint ./src"
+    "lint": "eslint ./src",
+    "format": "prettier --write ."
   },
   "dependencies": {
     "astro": "^1.2.4",
