--- a/.github/workflows/format-code.yaml
+++ b/.github/workflows/format-code.yaml
@@ -4,9 +4,10 @@ jobs:
   Check-for-Code-Format-Errors:
     runs-on: ubuntu-latest
     steps:
-      - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
-      - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
-      - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
+      - name: Checkout current branch
+      - uses: actions/checkout@v3
+        with:
+          repository: ${{ github.repository }}
       - name: List files in the repository
         run: |
           ls ${{ github.workspace }}
