--- a/.github/workflows/format-code.yaml
+++ b/.github/workflows/format-code.yaml
@@ -7,6 +7,7 @@ jobs:
       - uses: actions/checkout@v3
         with:
           repository: ${{ github.repository }}
-      - name: List files in the repository
-        run: |
-          ls ${{ github.workspace }}
+      - name: Install NPM Packages
+        run: yarn install
+      - name: Run prettier
+        run: yarn prettier
