--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "astro build",
     "preview": "astro preview",
     "lint": "eslint ./src",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "prettier": "prettier ."
   },
   "dependencies": {
     "astro": "^1.2.4",
