--- a/.github/workflows/format-code.yaml
+++ b/.github/workflows/format-code.yaml
@@ -1,5 +1,7 @@
 name: Check for Code Format Errors
-on: [push]
+on:
+  pull_request:
+    types: [opened, reopened, ready_for_review]
 jobs:
   Check-for-Code-Format-Errors:
     runs-on: ubuntu-latest
