add comment to tsconfig

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,7 @@
     // Error when a value import is only used as a type.
     "importsNotUsedAsValues": "error",
     "experimentalDecorators": true,
-    "useDefineForClassFields": false,
+    "useDefineForClassFields": false, // neccessary for Lit
     "baseUrl": ".",
     "paths": {
       "@components/*": ["src/components/*"],
