--- a/firebase.json
+++ b/firebase.json
@@ -2,5 +2,79 @@
   "hosting": {
     "public": "dist",
     "ignore": ["firebase.json", "**/.*", "**/node_modules/**"]
+  },
+  "emulators": {
+    "auth": {
+      "port": 9099
+    },
+    "database": {
+      "port": 9000,
+      "rules": {
+        "rules": {
+          "posts": {
+            ".read": true,
+            ".indexOn": ["createdAt"],
+            "$postId": {
+              ".write": "auth !== null",
+              "body": {
+                ".validate": "newData.isString()"
+              },
+              "title": {
+                ".validate": "newData.isString() && newData.val().length < 255"
+              },
+              "picture": {
+                ".validate": "newData.isString()"
+              },
+              "createdAt": {
+                ".validate": "newData.isNumber() && newData.val() >= 0"
+              },
+              "updatedAt": {
+                ".validate": "newData.isNumber() && newData.val() >= 0"
+              }
+            }
+          },
+          "inquiries": {
+            ".read": "auth !== null",
+            ".indexOn": ["createdAt"],
+            "$inquiryId": {
+              ".write": true,
+              "body": {
+                ".validate": "newData.isString() && newData.val().length < 2000"
+              },
+              "phone": {
+                ".validate": "newData.isString() && newData.val().length < 255"
+              },
+              "email": {
+                ".validate": "newData.isString() && newData.val().length < 255"
+              },
+              "firstName": {
+                ".validate": "newData.isString() && newData.val().length < 255"
+              },
+              "lastName": {
+                ".validate": "newData.isString() && newData.val().length < 255"
+              },
+              "createdAt": {
+                ".validate": "newData.isNumber() && newData.val() >= 0"
+              },
+              "viewed": {
+                ".validate": "newData.isBoolean()"
+              }
+            }
+          }
+        }
+      }
+    },
+    "hosting": {
+      "port": 5001
+    },
+    "storage": {
+      "port": 9199
+    },
+    "ui": {
+      "enabled": true
+    }
+  },
+  "storage": {
+    "rules": "storage.rules"
   }
 }
