--- a/firebase.json
+++ b/firebase.json
@@ -5,20 +5,26 @@
   },
   "emulators": {
     "auth": {
+      "host": "0.0.0.0",
       "port": 9099
     },
     "database": {
+      "host": "0.0.0.0",
       "port": 9000,
       "rules": "./database.rules.json"
     },
     "hosting": {
+      "host": "0.0.0.0",
       "port": 5001
     },
     "storage": {
+      "host": "0.0.0.0",
       "port": 9199
     },
     "ui": {
-      "enabled": true
+      "host": "0.0.0.0",
+      "enabled": true,
+      "port": 4000
     }
   },
   "storage": {
