add docker compose

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ./src",
     "format": "prettier --write .",
     "prettier": "prettier --check .",
+    "docker": "docker-compose -f docker-compose.dev.yaml up",
     "emulate": "firebase emulators:start --import=./dump"
   },
   "dependencies": {
