--- a/docker-compose.dev.yaml
+++ b/docker-compose.dev.yaml
@@ -2,7 +2,7 @@ services:
   emulator:
     build:
       context: .
-      dockerfile: Dockerfile
+      dockerfile: emulators.Dockerfile
     ports:
       - "9000:9000"
       - "9099:9099"
