--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "astro": "^1.2.8",
     "firebase": "^9.10.0",
     "lit": "^2.3.1",
+    "lit-markdown": "^1.1.3",
     "marked": "^4.1.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
