--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "firebase": "^9.10.0",
     "lit": "^2.3.1",
     "lit-markdown": "^1.1.3",
+    "lit-markdown-editor": "^1.3.1",
     "marked": "^4.1.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
